# Pyxle

./: .gitignore  CLAUDE.md  DOCS_AUDIT.md  README.md  architecture.md  pyproject.toml
.github/workflows/: publish.yml
docs/: README.md  components.md  deployment.md  faq.md  tailwind.md  walkthrough.md
docs/advanced/: compiler-internals.md  ssr-pipeline.md
docs/architecture/: README.md  build-and-serve.md  cli.md  compiler.md  dev-server.md  overview.md  parser.md  pyx-files.md  routing.md  runtime.md  ssr.md
docs/core-concepts/: pyx-files.md  server-actions.md
docs/data/: api-routes.md  index.md  middleware-hooks.md  server-loaders.md
docs/deployment/: deployment.md  index.md
docs/devserver/: dev-server.md  index.md  overlay-and-watchers.md
docs/fundamentals/: index.md  loader-lifecycle.md  pyx-files.md
docs/getting-started/: installation.md  project-structure.md  quick-start.md
docs/guides/: api-routes.md  deployment.md  editor-setup.md  for-ai-agents.md  head-management.md  middleware.md  plugins.md  security.md
docs/internals/: compiler.md  index.md  ssr.md
docs/overview/: index.md  project-structure.md  what-is-pyxle.md
docs/plugins/: pyxle-auth.md  pyxle-db.md
docs/reference/: cli.md  client-api.md  config.md  configuration.md  index.md  plugins-api.md  runtime-api.md
docs/routing/: client-navigation.md  dynamic-segments.md  file-based-routing.md  index.md  layouts-and-slots.md
docs/runtime/: head-management.md  index.md  pyxle-client.md
docs/styling/: global-styles-and-scripts.md  index.md  tailwind.md
docs/tooling/: index.md  langkit.md  testing.md
editors/vscode-pyxle/: README.md  extension.js  language-configuration.json  package-lock.json  package.json  pyxle-language-tools-0.0.1.vsix
pyxle/: __init__.py  config.py  plugins.py  runtime.py
pyxle/cli/: __init__.py  assets.py  init.py  logger.py  scaffold.py  templates.py
pyxle/client/: Form.jsx  Head.jsx  Image.jsx  Script.jsx  index.js  useAction.jsx  usePathname.jsx
pyxle/compiler/: __init__.py  core.py  exceptions.py  jsx_imports.py  model.py  parser.py  writers.py
pyxle/devserver/: __init__.py  build.py  builder.py  client_files.py  layouts.py  middleware.py  overlay.py  path_utils.py  proxy.py  registry.py  route_hooks.py  routes.py  scanner.py  scripts.py  settings.py  starlette_app.py  styles.py  vite.py  watcher.py
pyxle/routing/: __init__.py  paths.py
pyxle/ssr/: __init__.py  _escape.py  head_merger.py  render_component.mjs  renderer.py  ssr_worker.mjs  template.py  view.py  worker_pool.py
pyxle/templates/: __init__.py
pyxle_langkit/: README.md  __init__.py  cli.py  document.py  lint.py  lsp.py  package-lock.json  package.json  parser.py  react_checker.py  service.py
pyxle_langkit/js/: react_parser_runner.mjs
tests/: test_config.py  test_plugins.py
tests/cli/: test_commands.py  test_logger.py  test_scaffold.py  test_templates.py
tests/compiler/: test_action_writers.py  test_compile.py  test_jsx_imports.py  test_parser.py  test_parser_diagnostics.py  test_parser_hardening.py
tests/devserver/: sample_middlewares.py  test_action_routes.py  test_build.py  test_builder.py  test_client_files.py  test_devserver_start.py  test_layouts.py  test_middleware.py  test_overlay.py  test_proxy.py  test_registry.py  test_route_hooks.py  test_routes.py  test_scanner.py  test_scripts.py  test_settings.py  test_starlette_app.py  test_styles.py  test_vite.py  test_watcher.py
tests/langkit/: test_cli.py  test_document.py  test_linting.py  test_lsp_diagnostics.py  test_parser_adapter.py  test_service.py  test_vscode_extension.py
tests/ssr/: test_escape.py  test_head_merging.py  test_integration.py  test_renderer.py  test_template.py  test_view.py  utils.py  (+1 more)
(+21 files in other folders)
