[build-system]
requires = ["hatchling>=1.25,<2.0"]
build-backend = "hatchling.build"

[project]
name = "pyxle"
version = "0.1.0"
description = "Python-first full-stack framework with an intelligent CLI."
readme = "README.md"
authors = [
  { name = "Shivam Saini", email = "hello@pyxle.dev" }
]
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12,<0.13",
  "starlette>=0.37,<0.38",
  "httpx>=0.27,<0.28",
  "watchdog>=4.0,<5.0"
]

[project.urls]
Homepage = "https://pyxle.dev"
Repository = "https://github.com/shivamsn97/pyxle"
Documentation = "https://pyxle.dev/docs"
"Bug Tracker" = "https://github.com/shivamsn97/pyxle/issues"
PyPI = "https://pypi.org/project/pyxle/"

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-cov>=4.1,<5.0",
  "coverage>=7.4,<8.0",
  "ruff>=0.6,<0.7"
]
langkit = [
  "pygls>=1.3,<2.0",
  "lsprotocol>=2023.0.0",
  "pyflakes>=3.2,<3.3"
]

[project.scripts]
pyxle = "pyxle.cli:app"
pyxle-langkit = "pyxle_langkit.cli:app"
pyxle-langserver = "pyxle_langkit.lsp:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
include = [
  "pyxle/templates",
  "pyxle_langkit/js"
]

[tool.coverage.run]
branch = true
source = ["pyxle/cli", "pyxle/compiler", "pyxle/devserver", "pyxle/ssr"]

[tool.coverage.report]
fail_under = 95
show_missing = true
skip_covered = true

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --cov=pyxle.cli --cov=pyxle.compiler --cov=pyxle.devserver --cov=pyxle.ssr --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["."]
