[build-system]
requires = ["hatchling>=1.25,<2.0"]
build-backend = "hatchling.build"

[project]
name = "pyxle-framework"
version = "0.1.8"
description = "Python-first full-stack framework with an intelligent CLI."
readme = "README.md"
authors = [
  { name = "Shivam Saini", email = "hello@pyxle.dev" }
]
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Typing :: Typed",
]
keywords = ["web framework", "full-stack", "react", "ssr", "python"]
dependencies = [
  "typer>=0.12",
  "starlette>=0.37,<0.38",
  "httpx>=0.27,<0.28",
  "uvicorn[standard]>=0.29,<1.0",
  "watchdog>=4.0,<5.0"
]

[project.urls]
Homepage = "https://pyxle.dev"
Repository = "https://github.com/pyxle-framework/pyxle"
Documentation = "https://pyxle.dev/docs/"
"Bug Tracker" = "https://github.com/pyxle-framework/pyxle/issues"
PyPI = "https://pypi.org/project/pyxle-framework/"

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-cov>=4.1,<5.0",
  "coverage>=7.4,<8.0",
  "ruff>=0.6,<0.7"
]

[project.scripts]
pyxle = "pyxle.cli:app"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["pyxle"]

[tool.coverage.run]
branch = true
source = ["pyxle/cli", "pyxle/compiler", "pyxle/devserver", "pyxle/ssr"]

[tool.coverage.report]
fail_under = 95
show_missing = true
skip_covered = true

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --cov=pyxle.cli --cov=pyxle.compiler --cov=pyxle.devserver --cov=pyxle.ssr --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["."]
